hphp/test/zend/good/Zend/tests/constants/fixtures/folder4/fixture.php
<?hh

function folder4_fixture() {
echo __DIR__ . "\n";
 echo dirname(__FILE__) . "\n";
}
